objects/Event_Details__c.object
<CustomObject>
    <fields>
        <fullName>Center__c</fullName>
        <label>Center</label>
        <picklist>
            <picklistValues>
                <fullName>AFRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSSC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Travel_Budget__c</fullName>
        <label>Estimated Travel Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Materials_Needed__c</fullName>
        <label>Materials Needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Fees__c</fullName>
        <label>Registration Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Date__c</fullName>
        <label>Travel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Traveller_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Traveller Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Details</relationshipLabel>
        <relationshipName>Event_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>